k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: fintechapp
  labels:
    app.kubernetes.io/name: fintechapp
    app.kubernetes.io/managed-by: kubectl
